fix too much margin on the left on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,3 @@
-const text {
-    font-family:
-    consolas, monaco, courier, "courier new", fixed-width;
-}
+html {
+  /* show scrollbar regardless of page height */
+  overflow-y: scroll; }
